# rback

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/database/: connection.rs
src/errors/: api_errors.rs  mod.rs
src/handlers/: ai.rs  auth.rs  mod.rs
src/middleware/: auth.rs
src/models/: ai.rs  app.rs  auth.rs  mod.rs  user.rs
src/utils/: mod.rs
