[package]
name = "rback"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version ="0.8.4", features = ["macros", "query", "ws"]}
gemini-rust = "0.4.2"
serde = {version="1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version ="0.20.0", features = ["derive"]}
tower = "0.5.2"
tower-http = {version = "0.6.5", features = ["cors", "trace"]}
tower_governor = "0.7.0"
rust-argon2 = "2.1"
secrecy = "0.10.3"